Removed commented out code

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,21 +1,6 @@
 <footer class="container-fluid">
-    <!-- <div class="row">
-        <div class="col">
-            <ul class="w-auto mx-auto footer-links">
-                <li class="nav-link">
-                    <a  href="#">About</a>
-                </li>
-                <li class="text-muted">
-                    Follow Us
-                </li>
-                <li class="nav-link">
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div> -->
     <div class="row mt-1">
-        <div class="col text-center">
+        <div class="col text-center mt-1">
             <p class="text-white">Follow Us</p>
         </div>
     </div>
