--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -6,16 +6,16 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container mb-2">
+    <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <hr>
                 <h2 class="logo-font mb-4">Your Travel Shopping Bag</h2>
                 <hr>
             </div>
         </div>
     </div>
-    <!--Bag-->
+    <!--Display all the bag items-->
     <div class="row m-1">
         <div class="col">
             {% if bag_items %}
@@ -25,13 +25,15 @@
                     <h4>Trip Info</h4>
                 </div>
             </div>
-            
+            <!--trip image-->
             <div class="row p-md-2">
                 <div class="col-lg-3 col-md-6 spacing-md">
                     <img class="img-fluid" src="{{ item.trip.images.url }}" alt="{{ item.trip.name }}">
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <p><strong>{{ item.trip.name }}</strong></p>
+                    <a href="{{ item.trip.get_url }}" class="trip-link">
+                       <h5>{{ item.trip.name }}</h5>
+                    </a>
                     <p><i class="fas fa-hourglass-end fa-lg"></i><strong> Duration: </strong>
                         {{ item.trip.duration }}hrs</p>
                     <p><i class="far fa-clock fa-lg"></i> <strong>Start Time: </strong>
@@ -178,13 +180,17 @@
             </div>
             {% else %}
             <!--else the message and the link to go back to the home page-->
-            <p class="lead mb-5">Your bag is empty</p>
-            <a href="{% url 'trips' %}" class="btn btn-more">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">Discover More Trips</span>
-            </a>
+            <div class="row">
+                <div class="col text-center">
+                    <p class="lead mb-5">Your bag is empty</p>
+                    <a href="{% url 'trips' %}" class="btn btn-more">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Discover More Trips</span>
+                    </a>
+                </div>
+            </div>
             {% endif %}
         </div>
     </div>
@@ -194,6 +200,6 @@
 {% block postloadjs %}
 {{ block.super }}
 
-<script type="text/javascript" src="{% static 'bag/js/quantity.js' %}"></script>
+<script src="{% static 'bag/js/quantity.js' %}"></script>
 
 {% endblock %}
