--- a/static/css/base.css
+++ b/static/css/base.css
@@ -540,6 +540,15 @@ font-family: 'Oxygen', sans-seri  - paragraphs */
     position: absolute;
     right: 5%;
 }
+
+.trip-link {
+    text-decoration: none;
+    color: #000000;
+}
+
+.trip-link h5:hover {
+    color: #fafafa;
+}
 /**********************View Availability*/
 
 .booking-form {
@@ -747,6 +756,7 @@ footer {
     color: #fafafa;
 }
 
+.trip-link h5:hover,
 .category-heading:hover,
 .nav-item a:hover,
 .main-logo-link:hover,
