--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -30,19 +30,22 @@
                 <div class="col-lg-3 col-md-6 spacing-md">
                     <img class="img-fluid" src="{{ item.trip.images.url }}" alt="{{ item.trip.name }}">
                 </div>
+                <!--trip details-->
                 <div class="col-lg-2 col-md-6">
                     <a href="{{ item.trip.get_url }}" class="trip-link">
-                       <h5>{{ item.trip.name }}</h5>
+                        <h5>{{ item.trip.name }}</h5>
                     </a>
                     <p><i class="fas fa-hourglass-end fa-lg" aria-hidden="true"></i><strong> Duration: </strong>
                         {{ item.trip.duration }}hrs</p>
                     <p><i class="far fa-clock fa-lg" aria-hidden="true"></i> <strong>Start Time: </strong>
                         {{ item.trip.start_time }}</p>
-                    <p><i class="fas fa-map-marked-alt fa-lg" aria-hidden="true"></i> <strong> Departure Location: </strong>
+                    <p><i class="fas fa-map-marked-alt fa-lg" aria-hidden="true"></i> <strong> Departure Location:
+                        </strong>
                         {{ item.trip.departure_location }}</p>
                     {% if item.trip.averageRating > 0 %}
                     <p>
-                        <i class="fas fa-star fa-lg" aria-hidden="true"></i> {{ item.trip.averageRating|floatformat:1 }}/5
+                        <i class="fas fa-star fa-lg" aria-hidden="true"></i>
+                        {{ item.trip.averageRating|floatformat:1 }}/5
                         <span class="sr-only">rating</span>
                     </p>
                     {% endif %}
@@ -58,21 +61,24 @@
                     <p class="my-0 mt-2">{{ item.children_tickets }} <strong>Children</strong></p>
                     {% endif %}
                     <p class="my-0">{{ item.total_tickets }} <strong>Total Tickets</strong></p>
-                    </div>
+                </div>
                 <div class="col-lg-1 col-md-4">
                     <h4>Price</h4>
                     <p class="my-0">
-                        <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ item.adult_price }} <strong>Adults</strong>
+                        <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ item.adult_price }}
+                        <strong>Adults</strong>
                         <span class="sr-only">euro</span>
                     </p>
                     <!--check if there are any children tickets-->
                     {% if item.trip.family_friendly %}
                     <p class="my-0 mt-2">
-                        <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ item.child_price }} <strong>Children</strong>
+                        <i class="fas fa-euro-sign" aria-hidden="true"></i> {{ item.child_price }}
+                        <strong>Children</strong>
                         <span class="sr-only">euro</span>
                     </p>
                     {% endif %}
                 </div>
+                <!--Update quantity form-->
                 <div class="col-lg-3 col-md-4">
                     <h4>Quantity</h4>
                     <form class="form update-form" action="{% url 'update_bag' item.trip.id %}" method="POST">
@@ -81,20 +87,17 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <button class="decrease-quantity btn btn-sm"
-                                        data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
+                                    <button class="decrease-quantity btn btn-sm">
                                         <span>
                                             <i class="fas fa-minus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">minus</span>
                                         </span>
                                     </button>
                                 </div>
-                                <input class="form-control form-control-sm qty_input" type="number"
-                                    name="adult_tickets" value="{{ item.adult_tickets }}"
-                                    data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}">
+                                <input class="form-control form-control-sm qty_input" type="number" name="adult_tickets"
+                                    value="{{ item.adult_tickets }}" data-item_id="{{ item.trip.id }}">
                                 <div class="input-group-append">
-                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
-                                        id="increment-qty_{{ item.trip_id }}">
+                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}">
                                         <span>
                                             <i class="fas fa-plus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">plus</span>
@@ -108,21 +111,18 @@
                         <div class="form-group mt-1">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                    <button class="decrease-quantity-child btn btn-sm"
-                                        data-item_id="{{ item.trip_id }}" id="decrement-qty_{{ item.trip_id }}">
+                                    <button class="decrease-quantity-child btn btn-sm" data-item_id="{{ item.trip.id }}">
                                         <span>
                                             <i class="fas fa-minus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">minus</span>
                                         </span>
                                     </button>
                                 </div>
-                                <input class="form-control form-control-sm qty_input" type="number"
+                                <input class="form-control form-control-sm qty_input child-input" type="number"
                                     name="children_tickets" value="{{ item.children_tickets }}"
-                                    data-item_id="{{ item.trip_id }}" id="id_qty_{{ item.trip_id }}"
-                                    class="child-input">
+                                    data-item_id="{{ item.trip.id }}">
                                 <div class="input-group-append">
-                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}"
-                                        id="increment-qty_{{ item.trip_id }}">
+                                    <button class="add-quantity btn btn-sm" data-item_id="{{ item.trip_id }}">
                                         <span>
                                             <i class="fas fa-plus fa-sm" aria-hidden="true"></i>
                                             <span class="sr-only">plus</span>
@@ -138,23 +138,23 @@
                                 <div class="input-group-prepend">
                                     <h4>Booking Date: <i class="far fa-calendar-alt" aria-hidden="true"></i>
                                         <input type="text" class="calendar form-control datepicker" name="booking_date"
-                                            value="{{ item.booking_date }}" id="{{ item.trip_id }}">
+                                            value="{{ item.booking_date }}" id="datepicker-{{ item.trip.id }}">
                                     </h4>
                                 </div>
                             </div>
                         </div>
                     </form>
                     <a class="update-link btn"><small><i class="fas fa-sync"></i> Update</small></a>
-                    <a href="{% url 'remove_from_bag' item.trip.id %}"
-                        class="remove-item float-right btn">
+                    <a href="{% url 'remove_from_bag' item.trip.id %}" class="remove-item float-right btn">
                         <small>Remove <i class="fas fa-trash" aria-hidden="true"></i></small></a>
                 </div>
                 <div class="col-lg col-md mt-4">
                     <div class="float-end">
                         <h4>Sub Total</h4>
-                        <p class="d-inline"><i class="fas fa-euro-sign d-inline" aria-hidden="true"></i> {{ item.total_price }}
+                        <p class="d-inline"><i class="fas fa-euro-sign d-inline" aria-hidden="true"></i>
+                            {{ item.total_price }}
                             <span class="sr-only">euro</span>
-                        </p> 
+                        </p>
                     </div>
                 </div>
             </div>
