Renamed a function to view_bag, to avoid duplicate variable and function name, updated all the links

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -104,7 +104,7 @@
                     </fieldset>
                     <!--link back to the shopping bag-->
                     <div class="submit-button text-right mt-5 mb-2">
-                        <a href="{% url 'bag' %}" class="btn btn-dropdown">
+                        <a href="{% url 'view_bag' %}" class="btn btn-dropdown">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
