--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
                     <!--Shopping bag link-->
                     <li class="list-inline-item nav-item">
                         <a class="nav-link {% if total_price %} in-suitcase {% else %} text-white {% endif %}"
-                            href="{% url 'bag' %}">
+                            href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div>
                                     <i class="fas fa-suitcase-rolling fa-lg" aria-hidden="true"></i>
