Added aria-hidden attribute to all the icons

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -5,7 +5,7 @@
 {% block extra_title %} Checkout {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+<link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
 
@@ -20,42 +20,53 @@
                 <hr>
             </div>
         </div>
-         <!--Items in the bag-->
+        <!--Items in the bag-->
         {% for item in bag_items %}
         <div class="row m-1">
+            <!--Trip Image-->
             <div class="col-lg-3 col-md-6">
                 <img class="img-fluid" src="{{ item.trip.images.url }}" alt="{{ item.trip.name }}">
             </div>
+            <!--Trip name-->
             <div class="col-lg-2 col-md-6">
                 <p><strong>{{ item.trip.name }}</strong></p>
             </div>
+            <!--Tickets-->
             <div class="col-lg-2 col-md-4">
-                <h4><i class="fas fa-ticket-alt"></i> Tickets :</h4>
+                <h4><i class="fas fa-ticket-alt" aria-hidden="true"></i> Tickets :</h4>
                 <p class="my-0">{{ item.adult_tickets }} <strong>Adults</strong></p>
                 <!--check if there are any children tickets-->
                 {% if item.trip.family_friendly %}
                 <p class="my-0 mt-2">{{ item.children_tickets }} <strong>Children</strong></p>
                 {% endif %}
             </div>
+            <!--Price-->
             <div class="col-lg-2 col-md-4">
                 <h4>Price :</h4>
-                <p class="my-0"><i class="fas fa-euro-sign"></i> {{ item.adult_price }} <strong>Adults</strong></p>
+                <p class="my-0"><i class="fas fa-euro-sign" aria-hidden="true"></i>
+                    <span class="sr-only">euro</span>
+                    {{ item.adult_price }} <strong>Adults</strong>
+                </p>
                 <!--check if there are any children tickets-->
                 {% if item.trip.family_friendly %}
-                <p class="my-0 mt-2"><i class="fas fa-euro-sign"></i> {{ item.child_price }} <strong>Children</strong>
+                <p class="my-0 mt-2"><i class="fas fa-euro-sign" aria-hidden="true"></i>
+                    <span class="sr-only">euro</span>
+                    {{ item.child_price }} <strong>Children</strong>
                 </p>
                 {% endif %}
             </div>
+            <!--Booking Date-->
             <div class="col-lg-2 col-md-4">
-                <h4><i class="fas fa-calendar-alt"></i> Booking Date :</h4>
+                <h4><i class="fas fa-calendar-alt" aria-hidden="true"></i> Booking Date :</h4>
                 <p>{{ item.booking_date }}</p>
             </div>
+            <!--Total Trip Price-->
             <div class="col-lg-1 col-md-4">
                 <h4>Total Price</h4>
                 <p><i class="fas fa-euro-sign"></i> {{ item.total_price }}</p>
             </div>
         </div>
-         <hr>  
+        <hr>
         {% endfor %}
         <!--Order Form-->
         <div class="row justify-content-md-center mt-4 mb-2">
@@ -63,6 +74,7 @@
                 <h4>Please fill out the form below to complete your order</h4>
                 <form action="{% url 'checkout' %}" method="POST" id="purchase-form">
                     {% csrf_token %}
+                    <!--Personal Details-->
                     <fieldset class="rounded px-3 mt-5">
                         <legend class="fieldset-label px-2 w-auto">Personal Details</legend>
                         {{ order_form.first_name }}
@@ -70,6 +82,7 @@
                         {{ order_form.email }}
                         {{ order_form.phone_number }}
                     </fieldset>
+                    <!--Card Details-->
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label px-2 w-auto">Card Details</legend>
                         {{ order_form.street_address1 }}
@@ -85,6 +98,7 @@
                             <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info"
                                 checked>
                             {% else %}
+                            <!--Links to login/register-->
                             <label class="form-check-label" for="id-save-info">
                                 <a class="text-info" href="{% url 'register' %}">Create an account</a> or
                                 <a class="text-info" href="{% url 'login' %}">login</a> to save this information
@@ -106,7 +120,7 @@
                     <div class="submit-button text-right mt-5 mb-2">
                         <a href="{% url 'view_bag' %}" class="btn btn-next">
                             <span class="icon">
-                                <i class="fas fa-chevron-left"></i>
+                                <i class="fas fa-chevron-left" aria-hidden="true"></i>
                             </span>
                             <span class="font-weight-bold">Adjust Your Order</span>
                         </a>
@@ -114,16 +128,21 @@
                         <button id="submit-button" class="btn btn-dropdown">
                             <span class="font-weight-bold">Complete Order</span>
                             <span class="icon">
-                                <i class="fas fa-lock"></i>
+                                <i class="far fa-credit-card" aria-hidden="true"></i>
                             </span>
                         </button>
                         <!--Alert the user they are about to be charged-->
                         <p class="small text-danger my-0">
                             <span class="icon">
-                                <i class="fas fa-exclamation-circle"></i>
+                                <i class="fas fa-exclamation-circle" aria-hidden="true"></i>
                             </span>
-                            <span>Your card will be charged <strong>
-                                <i class="fas fa-euro-sign"></i>{{ grand_total|floatformat:2 }}</strong></span>
+                            <span>Your card will be charged
+                                <strong>
+                                    <i class="fas fa-euro-sign" aria-hidden="true"></i>
+                                    <span class="sr-only">euro</span>
+                                    {{ grand_total|floatformat:2 }}
+                                </strong>
+                            </span>
                         </p>
                     </div>
                 </form>
@@ -142,9 +161,9 @@
 {% endblock %}
 
 {% block postloadjs %}
-   {{ block.super }}
-   {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-   {{ client_secret|json_script:"id_client_secret" }}
-   <script src="{% static 'checkout/js/stripe.js' %}"></script>
+{{ block.super }}
+{{ stripe_public_key|json_script:"id_stripe_public_key" }}
+{{ client_secret|json_script:"id_client_secret" }}
+<script src="{% static 'checkout/js/stripe.js' %}"></script>
 
 {% endblock %}
