Added a link to trip_detail page

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -29,7 +29,9 @@
             </div>
             <!--Trip name-->
             <div class="col-lg-2 col-md-6">
-                <p><strong>{{ item.trip.name }}</strong></p>
+                <a href="{{ item.trip.get_url }}" class="trip-link">
+                    <h5>{{ item.trip.name }}</h5>
+                </a>
             </div>
             <!--Tickets-->
             <div class="col-lg-2 col-md-4">
